--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<!-- <html data-theme="cyberpunk" lang="en"> -->
-<html lang="en">
+<html data-theme="ada9000" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo512.png" />
